# dmidecoder

./: CMakeLists.txt  main.cpp
dmi/: Decoder.cpp  Decoder.h  Entry.h  Structure.h
